Use Path.of instead of Paths.get for modern Java style